// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPageBody is rendered 1`] = `
<main
  aria-label="aria-label"
  class="euiPageBody testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiPageBody restrict width can be set to a custom number 1`] = `
<main
  aria-label="aria-label"
  class="euiPageBody euiPageBody--restrictWidth-custom testClass1 testClass2"
  data-test-subj="test subject string"
  style="max-width:1024px"
/>
`;

exports[`EuiPageBody restrict width can be set to a custom value and measurement 1`] = `
<main
  aria-label="aria-label"
  class="euiPageBody euiPageBody--restrictWidth-custom testClass1 testClass2"
  data-test-subj="test subject string"
  style="max-width:24rem"
/>
`;

exports[`EuiPageBody restrict width can be set to a default 1`] = `
<main
  aria-label="aria-label"
  class="euiPageBody euiPageBody--restrictWidth-default testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;
